--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,9 +3,9 @@ cmake_minimum_required(VERSION 2.8)
 project(deblur)
 
 find_package(CUDA REQUIRED)
-
+#find_package(OpenCV REQUIRED)
 # OpenCV
-find_package(OpenCV 2.4.8 COMPONENTS
+find_package(OpenCV COMPONENTS
     core highgui imgproc video
     REQUIRED
 )
@@ -20,6 +20,7 @@ file(GLOB SRCS "./*.cu")
 
 include_directories(${CMAKE_SOURCE_DIR})
 message( ${CMAKE_SOURCE_DIR} )
+message( ${OpenCV_INCLUDE_DIRS} )
 cuda_add_executable(deblur ${SRCS})
 target_link_libraries(deblur -lm ${OpenCV_LIBS} ${CUDA_LIBRARIES} ${CUDA_cublas_LIBRARY})
 # Add CUBLAS to target
