Tested on a nacked machine

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,20 +14,17 @@ if(opencv_core_found)
 endif()
 include_directories(${PYTHON_INCLUDE_DIRS})
 
-set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS}; -O3; -std=c++11; -arch=sm_50; -Xptxas -v)
+set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS}; -O3; -std=c++11; --use_fast_math; -arch=sm_50; -Xptxas -v)
 
 #add_definitions(-DDEBUG)
 file(GLOB SRCS "./*.cu")
 
-find_package(PythonLibs 2.7 REQUIRED)
+find_package(PythonLibs 3.5 REQUIRED)
 include_directories(${CMAKE_SOURCE_DIR})
 
 #set location of libcudnn.so and include directory of CUDNN
-set(CUDNN_LIB /usr/prakt/s0012/Desktop/s0012/cuda/lib64/libcudnn.so)
-include_directories(/usr/prakt/s0012/Desktop/s0012/cuda/include)
-
 message( ${CMAKE_SOURCE_DIR} )
 message( ${OpenCV_INCLUDE_DIRS} )
 cuda_add_executable(deblur ${SRCS})
-target_link_libraries(deblur -lm ${PYTHON_LIBRARIES} ${OpenCV_LIBS} ${CUDA_LIBRARIES} ${CUDA_cublas_LIBRARY} ${CUDNN_LIB})
+target_link_libraries(deblur -lm -lcudnn ${PYTHON_LIBRARIES} ${OpenCV_LIBS} ${CUDA_LIBRARIES} ${CUDA_cublas_LIBRARY})
 # Add CUBLAS to target
